force-app/main/default/objects/SIR_Parametros__c/SIR_Parametros__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Parámetros de la aplicación MCSOL</description>
    <label>SIR_Parametros</label>
</CustomObject>