force-app/main/default/objects/SIR_Parametros__c/fields/SIR_Activo__c.field-meta.xml
<CustomField>
    <fullName>SIR_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el parámetro está vigente o no</description>
    <label>SIR_Activo</label>
    <type>Checkbox</type>
</CustomField>