force-app/main/default/objects/SIR_Parametros__c/fields/SIR_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>SIR_Descripcion__c</fullName>
    <description>Descripción del parámetro</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SIR_Descripcion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>