force-app/main/default/objects/SIR_Parametros__c/fields/SIR_Parametro__c.field-meta.xml
<CustomField>
    <fullName>SIR_Parametro__c</fullName>
    <description>Código del parámetro configurado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SIR_Parametro</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>