force-app/main/default/objects/SIR_Parametros__c/fields/SIR_Tipo__c.field-meta.xml
<CustomField>
    <fullName>SIR_Tipo__c</fullName>
    <description>Clasificación de los parámetros. Agrupa una serie de registros según categoría</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SIR_Tipo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>