force-app/main/default/objects/SIR_Parametros__c/fields/SIR_Valor__c.field-meta.xml
<CustomField>
    <fullName>SIR_Valor__c</fullName>
    <description>Campo para almacenar los valores configurables del parámetro</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SIR_Valor</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>